; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_posixshm_check_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_posixshm_check_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { %struct.label* }
%struct.shmfd = type { i32 }
%struct.label = type { i32 }

@MAGIC_CRED = common dso_local global i32 0, align 4
@MAGIC_POSIX_SHM = common dso_local global i32 0, align 4
@posixshm_check_write = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ucred*, %struct.ucred*, %struct.shmfd*, %struct.label*)* @test_posixshm_check_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_posixshm_check_write(%struct.ucred* %0, %struct.ucred* %1, %struct.shmfd* %2, %struct.label* %3) #0 {
  %5 = alloca %struct.ucred*, align 8
  %6 = alloca %struct.ucred*, align 8
  %7 = alloca %struct.shmfd*, align 8
  %8 = alloca %struct.label*, align 8
  store %struct.ucred* %0, %struct.ucred** %5, align 8
  store %struct.ucred* %1, %struct.ucred** %6, align 8
  store %struct.shmfd* %2, %struct.shmfd** %7, align 8
  store %struct.label* %3, %struct.label** %8, align 8
  %9 = load %struct.ucred*, %struct.ucred** %5, align 8
  %10 = getelementptr inbounds %struct.ucred, %struct.ucred* %9, i32 0, i32 0
  %11 = load %struct.label*, %struct.label** %10, align 8
  %12 = load i32, i32* @MAGIC_CRED, align 4
  %13 = call i32 @LABEL_CHECK(%struct.label* %11, i32 %12)
  %14 = load %struct.ucred*, %struct.ucred** %6, align 8
  %15 = icmp ne %struct.ucred* %14, null
  br i1 %15, label %16, label %22

16:                                               ; preds = %4
  %17 = load %struct.ucred*, %struct.ucred** %6, align 8
  %18 = getelementptr inbounds %struct.ucred, %struct.ucred* %17, i32 0, i32 0
  %19 = load %struct.label*, %struct.label** %18, align 8
  %20 = load i32, i32* @MAGIC_CRED, align 4
  %21 = call i32 @LABEL_CHECK(%struct.label* %19, i32 %20)
  br label %22

22:                                               ; preds = %16, %4
  %23 = load %struct.label*, %struct.label** %8, align 8
  %24 = load i32, i32* @MAGIC_POSIX_SHM, align 4
  %25 = call i32 @LABEL_CHECK(%struct.label* %23, i32 %24)
  %26 = load i32, i32* @posixshm_check_write, align 4
  %27 = call i32 @COUNTER_INC(i32 %26)
  ret i32 0
}

declare dso_local i32 @LABEL_CHECK(%struct.label*, i32) #1

declare dso_local i32 @COUNTER_INC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
